--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ input {
     width: 70%;
     margin-left: auto;
     margin-right: auto;
+    box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 #moves {
@@ -46,4 +48,7 @@ input {
     font-size: 18px;
     line-height: 1.5;
     color: #4caf50;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
